--- a/css/template.css
+++ b/css/template.css
@@ -283,11 +283,11 @@ body {
 .comment-respond{
 }
 
-.icons-medium{
+.social-icons ul{
   padding: 0; margin: 0;
 }
 
-.icons-medium li{
+.social-icons ul li{
   list-style: none;
   display: inline;
   margin: 0 5px 0;
