--- a/css/template.css
+++ b/css/template.css
@@ -1,6 +1,11 @@
 /*
  * Globals
  */
+
+ #map{
+      height: 100%;
+    }
+
 /*Fixar menu*/
 /* Links */
 a,
@@ -47,9 +52,12 @@ hr{
   margin: none !important;
   padding: none !important;
 }
-.tribe_events{
+/*.tribe_events{
   color:#000;
 }
+.tribe-event-date-start{
+  color: #000;
+}*/
 /*
  * Base structure
  */
@@ -83,6 +91,9 @@ body {
   .main-container{
     flex-direction: column-reverse;
   }
+  #map{
+      height: 400px !important;
+    }
 }
 
 .menu-principal{
@@ -114,6 +125,11 @@ body {
 .main-img img{
   height: 430px;
 
+}
+
+.text-home{
+  font-family: 'Sintony', sans-serif;
+  font-size: 18px;
 }
 
 /*
@@ -155,6 +171,14 @@ body {
   align-items: center;
   padding: 10px;
 }
+.lideres-sub-profile{
+
+}
+.lideres-sub-row{
+  display: flex;
+  flex-direction: column;
+}
+.lideres-sub-row div img{align-self: center !important;}
 .lideres-img img{
   max-width: 140px !important;
   max-height: 140px !important;
@@ -324,13 +348,20 @@ body {
 }
 
 .img-content-fotos{
-  height: 150px;
-  width: 150px;
+  max-height: 150px;
+  max-width: 150px;
+  min-width: 150px;
+  min-height: 150px;
 }
 
 .img-content-container{
   display: flex;
   align-items: center;
+  margin:10px 0;
+  border: 1px solid #9c9a9aa1;
+  box-shadow: 1px 1px 11px 1px;
+  border-radius: 10px;
+  padding: 5px;
 }
 .img-content-container a{
   color: #7175ff;
@@ -340,4 +371,67 @@ body {
 
 .author-title{
   
+}
+
+.contato-container{
+  margin: 10px 0;
+}
+.map{
+  background: #fff;
+  padding: 10px;
+  color: #000 !important;
+}
+
+.contato-form{
+  color: #000;
+}
+
+/*Style bolha do google maps*/
+/* The popup bubble styling. */
+.popup-bubble {
+  /* Position the bubble centred-above its parent. */
+  position: absolute;
+  top: 0;
+  left: 0;
+  transform: translate(-50%, -100%);
+  /* Style the bubble. */
+  background-color: white;
+  padding: 5px;
+  border-radius: 5px;
+  font-family: sans-serif;
+  overflow-y: auto;
+  max-height: 100px;
+  box-shadow: 0px 2px 10px 1px rgba(0,0,0,0.5);
+}
+/* The parent of the bubble. A zero-height div at the top of the tip. */
+.popup-bubble-anchor {
+  /* Position the div a fixed distance above the tip. */
+  position: absolute;
+  width: 100%;
+  bottom: /* TIP_HEIGHT= */ 8px;
+  left: 0;
+}
+/* This element draws the tip. */
+.popup-bubble-anchor::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  /* Center the tip horizontally. */
+  transform: translate(-50%, 0);
+  /* The tip is a https://css-tricks.com/snippets/css/css-triangle/ */
+  width: 0;
+  height: 0;
+  /* The tip is 8px high, and 12px wide. */
+  border-left: 6px solid transparent;
+  border-right: 6px solid transparent;
+  border-top: /* TIP_HEIGHT= */ 8px solid white;
+}
+/* JavaScript will position this div at the bottom of the popup tip. */
+.popup-container {
+  cursor: auto;
+  height: 0;
+  position: absolute;
+  /* The max width of the info window. */
+  width: 500px;
 }
