cores de textos e links 3

--- a/css/template.css
+++ b/css/template.css
@@ -200,14 +200,17 @@ body {
 
 .generate-template-container-fluid{
   margin-top: 5px;
+  background: #2b2b2b;
 }
 .generate-template-container-fluid h3{
-  color: #000;
+  color: #fff;
   padding: 10px;
 }
 .generate-template-container{
+  background: #232323f5;
   padding: 10px;
   margin-bottom: 5px;  
+  border-radius: 10px;
 }
 .generate-template-img{
   margin-top: 5px;
